added kafka
