# transaction-service/src/main/java/com/example/transactionservice/kafka/api/WithdrawalRequestedEvent.java
@@ -1,0 +1,22 @@
+package com.example.transactionservice.kafka.api;
+
+import lombok.Builder;
+import lombok.Getter;
+import lombok.extern.jackson.Jacksonized;
+
+import java.math.BigDecimal;
+import java.time.Instant;
+import java.util.UUID;
+
+@Builder
+@Getter
+@Jacksonized
+public class WithdrawalRequestedEvent {
+    private UUID transactionId;
+    private UUID userId;
+    private UUID walletId;
+    private BigDecimal amount;
+    private String currency;
+    private String destination;
+    private Instant timestamp;
+}
